--- a/resources/js/pages/frontend/cartpage/cartpage.css
+++ b/resources/js/pages/frontend/cartpage/cartpage.css
@@ -6,11 +6,15 @@
     width: 50px;
     border: 0.5px solid gray;
     outline: 0px;
+    margin-left: 6px;
+    margin-right: 6px;
 }
 .cartpageform button{
     border: 0px;
-    font-size: 16px;
+    font-size: 40px;
     cursor: pointer;
     background-color: black;
+    height: fit-content;
     color:white;
+
 }
